--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <p>Ceci est un e-mail avec un pixel de suivi.</p>
     <img src="im.png" alt="Pixel de Suivi" style="width:1px;height:1px;border:0;">
     <img src="FMX_3D_product0023.png" alt="Pixel de Suivi" style="width:100px;height:100px;border:0;">
+    <img src="Energy_drink_with_fruits.jpg" alt="Energy drink" style="width:100px;height:100px;border:0;">
+    <img src=" earbuds.png" alt="Energy drink" style="width:100px;height:100px;border:0;">
+    <img src=" drone_view.png" alt="Energy drink" style="width:100px;height:100px;border:0;">
+    <img src=" parfum.jpg" alt="Energy drink" style="width:100px;height:100px;border:0;">
+
 </body>
 </html>
 
